Fix issue on Safari

--- a/framework/components/ecl-search-forms/_search-forms.scss
+++ b/framework/components/ecl-search-forms/_search-forms.scss
@@ -24,6 +24,7 @@
 .ecl-search-form__button {
   @extend %ecl-icon;
 
+  flex-shrink: 0;
   padding: 0 map-get($ecl-spacing, 'm');
   position: relative;
   text-indent: -999em;
